fixed cropper FE functionality
BE submission still buggy

--- a/scarlet/cms/static/scarlet/compass/scss/admin/modules/_crops.scss
+++ b/scarlet/cms/static/scarlet/compass/scss/admin/modules/_crops.scss
@@ -22,6 +22,7 @@ section#main {
 }
 
 .crop-settings {
+  display: none;
 	margin: 0;
 	padding: 0;
 
@@ -69,9 +70,14 @@ $border-color: #ccc;
 $bg-color : #fff;
 
 .jcrop {
-  padding: 0 1em 1em;
-  border-radius: .5em;
-  display:inline-block;
+  //padding: 0 1em 1em;
+  //border-radius: .5em;
+  //display:inline-block;
+
+  .original,
+  .mask {
+    @include box-shadow(0 1px 10px 0 rgba(0,0,0,0.4));
+  }
 
   .original {
     margin: auto;
@@ -83,7 +89,25 @@ $bg-color : #fff;
   }
 
   .preview {
-    display: inline-block;
+    @include transition(opacity 200ms);
+    margin: 1em 0;
+    padding: 0;
+    opacity: 1;
+
+    &.active {
+      opacity: 1;
+    }
+  }
+
+  .mask {
+    @include box-shadow(0 1px 10px 0 rgba(0,0,0,0.4));
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+  }
+
+  .previewX {
+    //display: inline-block;
     background: #fff;
     @include box-shadow(0 10px 20px 0 #000);
     padding: .5em;
@@ -92,11 +116,17 @@ $bg-color : #fff;
     position: relative;
     cursor: pointer;
 
+    #preview {
+        width: 30%;
+        position: absolute;
+      }
+
     .thumb {
       overflow: hidden;
       position: relative;
 
       img {
+        width: 30%;
         position: absolute;
       }
     }
